# Omega-Windows-Assistant

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements-voice.txt  requirements.txt
config/: app_config.yaml  application_aliases.json  command_patterns.json  permissions.json  protected_paths.json
docs/: architecture.md  browser.md  development_roadmap.md  gui.md  knowledge.md  phase_10_reconciliation.md  productivity.md  safety_policy.md  scheduling.md  system.md  voice.md
scripts/: setup_environment.py
src/omega/: __init__.py  __main__.py  app.py
src/omega/gui/: theme.py  (+9 more)
tests/: __init__.py  file_support.py  folder_support.py  recovery_support.py  test_app.py  test_logger.py  test_paths.py  test_settings.py  test_side_effect_prohibitions.py
tests/applications/: __init__.py  test_definitions.py  test_discovery.py  test_launcher.py  test_manager.py  test_processes.py  test_registry.py  test_results.py
tests/browser/: __init__.py  test_composition_and_gui.py  test_configuration.py  test_dispatcher.py  test_import_and_backend.py  test_manager.py  test_models_and_bookmarks.py  test_parser.py  test_search.py  test_session_integration.py  test_validation.py
tests/database/: test_action_repository.py  test_command_repository.py  test_configuration.py  test_connection.py  test_migrations.py  test_phase10_repositories.py  test_schema.py
tests/execution/: __init__.py  test_dispatcher.py  test_file_dispatcher.py  test_folder_dispatcher.py  test_history_dispatcher.py  test_lifecycle_persistence.py  test_safety_integration.py
(+283 files in other folders)
