[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-windows-assistant"
version = "0.1.0"
description = "A safety-first Windows desktop assistant foundation."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Omega contributors" }]
dependencies = [
    "PyYAML>=6.0,<7.0",
]

[project.scripts]
omega = "omega.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unreachable = true
show_error_codes = true
